--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     <script src="js/shift.js"></script>
-    
+    <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-old-ie-min.css">
     <![endif]-->
@@ -37,7 +37,7 @@
 
 <div class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href="">Parcial</a>
+        <a class="pure-menu-heading" href="">Practice #3</a>
 
         <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
@@ -47,12 +47,12 @@
 
 <div class="splash-container">
     <div class="splash">
-        <h1 class="splash-head">Encripción</h1>
+        <h1 class="splash-head">Encryption</h1>
         <p class="splash-subhead">
-            Impedir que nadie excepto el destinatario de los mismos pueda leer la información
+            Encryption algorithm for the class.
         </p>
         <p>
-            <a href="#formulario" class="pure-button pure-button-primary">Empezar</a>
+            <a href="#formulario" class="pure-button pure-button-primary">Start</a>
         </p>
     </div>
 </div>
@@ -60,32 +60,34 @@
 <div class="content-wrapper">
 
     <div class="content">
-        <h2 class="content-head is-center">Introduce una palabra</h2>
+        <h2 class="content-head is-center">Type a word</h2>
 
         <div class="pure-g">
             <div id="formulario" class="l-box-lrg pure-u-1 pure-u-md-2-5">
-                <form id="myForm" class="pure-form pure-form-stacked">
+                <div class="pure-form pure-form-stacked">
                     <fieldset>
 
-                        <label for="palabra">Palabra</label>
+                        <label for="palabra">Word</label>
                         <input  name = "palabra" id="palabra" type="text" placeholder="Palabra">
+
+                        <label for="contra">Password</label>
+                        <input  name = "contra" id="contra" type="password" placeholder="Contraseña">
 
                         <label for="opcion">Opción</label>
                         <select id="opcion">
-                            <option>Encriptar</option>
-                            <option>Desencriptar</option>
+                            <option>Encrypt</option>
+                            <option>Decrypt</option>
                         </select>
                         <br>
-
-                        <button type="submit" class="pure-button" onclick="magia(document.getElementById('palabra').value, document.getElementById('opcion').value)">Dale</button>
-                        <button type="reset" class="pure-button" >Borra</button>
+                        <button class="pure-button" onclick="magia();"> Dale</button>
+                        <button class="pure-button" onclick="borra();">Borra</button>
                     </fieldset>
-                </form>
+                </div>
             </div>
 
              <div class="l-box-lrg pure-u-1 pure-u-md-3-5" >
                 <h4>Resultado</h4>
-                <h2> <span id="result"> Aqui va el resultado</span>
+                <h2> <div id="result"> Result Here</div>
                 </h2>
             </div>
         </div>
@@ -93,13 +95,9 @@
     </div>
 
     <div class="footer l-box is-center">
-        Hecho con cariño para la clase de Diseño
+       Computer Security 2017
     </div>
 
 </div>
-
-
-
-
 </body>
 </html>
